--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,64 @@
+absl-py==1.0.0
+astroid==2.9.3
+astunparse==1.6.3
+cachetools==5.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.0.4
+colorama==0.4.4
+filelock==3.6.0
+flatbuffers==2.0
+gast==0.5.3
+google-auth==2.6.2
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.44.0
+h5py==3.6.0
+huggingface-hub==0.4.0
+idna==3.3
+importlib-metadata==4.11.3
+isort==5.10.1
+joblib==1.1.0
+keras==2.8.0
+Keras-Preprocessing==1.1.2
+lazy-object-proxy==1.7.1
+libclang==13.0.0
+Markdown==3.3.6
+mccabe==0.6.1
+numpy==1.22.3
+oauthlib==3.2.0
+opt-einsum==3.3.0
+packaging==21.3
+platformdirs==2.5.1
+protobuf==3.19.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.8.0
+pylint==2.12.2
+pyparsing==3.0.7
+PyYAML==6.0
+pyzmq==22.3.0
+regex==2022.3.15
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
+sacremoses==0.0.49
+six==1.16.0
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
 tensorflow==2.8.0
-transformers
-zmq
+tensorflow-io-gcs-filesystem==0.24.0
+termcolor==1.1.0
+tf-estimator-nightly==2.8.0.dev2021122109
+tokenizers==0.11.6
+toml==0.10.2
+tqa-training-lib==0.1.0
+tqdm==4.63.0
+transformers==4.17.0
+typing_extensions==4.1.1
+urllib3==1.26.9
+Werkzeug==2.0.3
+wrapt==1.13.3
+zipp==3.7.0
+zmq==0.0.0
