--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ gast==0.5.3
 google-auth==2.6.3
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+gunicorn==20.1.0
 grpcio==1.44.0
 h5py==3.6.0
 huggingface-hub==0.5.1
@@ -33,6 +34,7 @@ protobuf==3.20.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.7
+python-decouple==3.6
 PyYAML==6.0
 regex==2022.3.15
 requests==2.27.1
